fix: cors security and application property